--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,10 @@
     <option value="">Select PLC</option>
     <!-- Options will be added here dynamically -->
 </select>
-            <button>Show</button>
+
+            <button id="showButton">Show</button>
+            <button id="settingsButton" >Settings</button>
+            <button id="registerButton">Register</button>
 
         </div>
     </div>
